Reliably build documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Rouven Spreckels <rs@qu1x.dev>"]
 edition = "2018"
 description = "Virtual Trackball Orbiting via the Exponential Map"
-documentation = "https://docs.rs/trackball"
+documentation = "https://doc.qu1x.dev/trackball"
 repository = "https://github.com/qu1x/trackball"
 readme = "README.md"
 license = "BSD-3-Clause"
