--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "trackball"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Rouven Spreckels <rs@qu1x.dev>"]
 edition = "2018"
 description = "Virtual Trackball Orbiting via the Exponential Map"
@@ -8,7 +8,7 @@ documentation = "https://doc.qu1x.dev/trackball"
 repository = "https://github.com/qu1x/trackball"
 build = "build.rs"
 readme = "README.md"
-license = "BSD-3-Clause"
+license = "BSD-2-Clause-Patent"
 keywords = [
 	"virtual-trackball",
 	"exponential-map",
@@ -26,7 +26,7 @@ include = [
 	"Cargo.toml",
 	"README.md",
 	"RELEASES.md",
-	"LICENSE.md",
+	"LICENSES/*.md",
 ]
 
 [badges]
