--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ keywords = [
 	"camera",
 ]
 categories = [
+	"no-std",
 	"graphics",
 ]
 include = [
@@ -33,7 +34,8 @@ include = [
 travis-ci = { repository = "qu1x/trackball" }
 
 [dependencies]
-nalgebra = "0.26"
+heapless = { version = "0.7", default-features = false }
+nalgebra = { version = "0.26", default-features = false, features = ["libm"] }
 
 [build-dependencies]
 cc = { version = "1", optional = true }
