--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.8.1"
 authors = ["Rouven Spreckels <rs@qu1x.dev>"]
 edition = "2021"
 description = "Virtual Trackball Orbiting via the Exponential Map"
-documentation = "https://doc.qu1x.dev/trackball"
+documentation = "https://docs.rs/trackball"
 repository = "https://github.com/qu1x/trackball"
 build = "build.rs"
 readme = "README.md"
