--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,14 +37,15 @@ rustdoc-args = ["--cfg", "docsrs"]
 [dependencies]
 heapless = { version = "0.7.16", default-features = false }
 nalgebra = { version = "0.32.3", default-features = false, features = ["libm-force"] }
+simba = { version = "0.8.1", default-features = false, features = ["libm"] }
 approx = { version = "0.5.1", default-features = false }
 serde = { version = "1.0.175", default-features = false, features = ["derive"], optional = true }
 rkyv = { version = "0.7.42", default-features = false, optional = true }
 
 [features]
 glam = ["nalgebra/convert-glam024"]
-serde = ["dep:serde", "nalgebra/serde-serialize-no-std"]
-rkyv = ["dep:rkyv", "nalgebra/rkyv-serialize-no-std"]
+serde = ["dep:serde", "nalgebra/serde-serialize-no-std", "simba/serde_serialize"]
+rkyv = ["dep:rkyv", "nalgebra/rkyv-serialize-no-std", "simba/rkyv-serialize"]
 
 [build-dependencies]
 cc = { version = "1.0.79", optional = true }
