--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ include = [
 ]
 
 [package.metadata.docs.rs]
-features = ["glam", "serde", "rkyv"]
+features = ["glam", "serde"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
