--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "trackball"
-version = "0.11.1"
+version = "0.11.2"
+rust-version = "1.70.0"
 authors = ["Rouven Spreckels <rs@qu1x.dev>"]
 edition = "2021"
 description = "Virtual Trackball Orbiting via the Exponential Map"
@@ -31,7 +32,7 @@ include = [
 ]
 
 [package.metadata.docs.rs]
-features = ["glam", "serde"]
+all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
