--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,7 +25,7 @@ jobs:
       run: cargo test
     - name: clippy
       run: |
-        cargo clippy --tests -- -D clippy::all -D clippy::pedantic -D clippy::nursery
+        cargo clippy --tests
     - name: doc
       run: cargo doc
     - name: fmt
@@ -49,7 +49,7 @@ jobs:
       run: cargo test --all-features
     - name: clippy
       run: |
-        cargo clippy --tests --all-features -- -D clippy::all -D clippy::pedantic -D clippy::nursery
+        cargo clippy --tests --all-features
     - name: doc
       run: cargo doc --all-features
     - name: fmt
@@ -68,7 +68,7 @@ jobs:
       run: cargo test --all-features
     - name: clippy
       run: |
-        cargo clippy --tests --all-features -- -D clippy::all -D clippy::pedantic -D clippy::nursery
+        cargo clippy --tests --all-features
     - name: doc
       env:
         RUSTDOCFLAGS: --cfg docsrs
