--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,14 +37,13 @@ rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
 heapless = { version = "0.9.1", default-features = false }
-nalgebra = { version = "0.34.1", default-features = false }
-simba = { version = "0.9.1", default-features = false }
+nalgebra = { version = "0.34.1", default-features = false, features = ["libm"] }
+simba = { version = "0.9.1", default-features = false, features = ["libm"] }
 approx = { version = "0.5.1", default-features = false }
 serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
 rkyv = { version = "0.7.45", default-features = false, optional = true }
 
 [features]
-libm = ["nalgebra/libm", "simba/libm"]
 glam = ["nalgebra/convert-glam030"]
 serde = ["dep:serde", "nalgebra/serde-serialize-no-std", "simba/serde_serialize"]
 rkyv = ["dep:rkyv", "nalgebra/rkyv-serialize-no-std", "simba/rkyv-serialize"]
